<resources>
    <string name="app_name">Arcade_Game</string>
    <string name="not_a_member">Not a member ?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="arcade">Arcade</string>
    <string name="exit">exit</string>
    <string name="seen">seen</string>
    <string name="word">word</string>
    <string name="level_1">Level: 1</string>
    <string name="number">Number</string>
    <string name="insert_number">Insert Number</string>
    <string name="score_0">score: 0</string>
    <string name="number_0">Number: 0</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="put_finger">Put Finger</string>
    <string name="start_game">Start Game</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="submit">Submit</string>
    <string name="re_password">Re-Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="seven_boom">Seven Boom</string>
    <string name="number_memory">Number Memory</string>
    <string name="word_game">Word Game</string>
    <string name="finger_me">Finger Me</string>
    <string name="colors_game">Colors Game</string>
    <string name="logout">Logout</string>
    <string name="crack_the_egg">Crack The Egg</string>
    <string name="colors">Colors</string>
    <string name="finger">Finger</string>
    <string name="boom">Boom</string>
    <string name="memory">Memory</string>
    <string name="words">Words</string>
    <string name="hello">Hello:</string>
</resources>