<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="20"
    android:weightSum="20"
    android:background="@drawable/giphy"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="16"
        android:layout_weight="16"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:weightSum="14"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/arcade"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="35sp"
                android:gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/custom_edit_text"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                android:hint="@string/email"
                android:textColorHint="#fff"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_email"
                android:gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>

            <EditText
                android:id="@+id/password"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:hint="@string/password"
                android:textColorHint="#fff"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic__lock"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:weightSum="10"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:weightSum="5"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"/>

                    <Button
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:text="@string/login"
                        android:background="@drawable/button"
                        android:textStyle="bold"/>


                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="5"
                android:layout_weight="5.5"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3.5"
                    android:weightSum="3.5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="@string/not_a_member"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/register_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="top"
                        android:layout_weight="1.5"
                        android:layout_marginTop="55dp"
                        android:layout_marginBottom="55dp"
                        android:text="@string/register"
                        android:background="@drawable/button"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>