<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="20"
    android:weightSum="20"
    android:background="@drawable/color_game_backround"
    android:orientation="vertical"
    tools:context=".ColorsGame">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="16"
        android:layout_weight="16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"
            android:weightSum="16"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="14"
                android:layout_weight="14"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/level"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/level_1"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/score_0"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"/>

                    <Button
                        android:id="@+id/start_game_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:background="@drawable/button"
                        android:text="@string/start_game"
                        android:textStyle="bold"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/red_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:text="@string/red"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:background="@color/light_red"
                        android:clickable="false"/>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"/>

                    <Button
                        android:id="@+id/blue_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:text="@string/blue"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:background="@color/light_blue"
                        android:clickable="false"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/yellow_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:text="@string/yellow"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:background="@color/light_yellow"
                        android:clickable="false"/>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"/>

                    <Button
                        android:id="@+id/green_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:text="@string/green"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:background="@color/light_green"
                        android:clickable="false"/>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"/>

                    <Button
                        android:id="@+id/submit_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:text="Submit"
                        android:background="@drawable/button"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"/>

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.5"
            android:background="@drawable/button"
            android:text="@string/exit"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>